--- a/pictoment/index.html
+++ b/pictoment/index.html
@@ -8,7 +8,10 @@
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css"/>
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css"/>
 
-    <title>Vite App</title>
+
+    <link href="https://unpkg.com/nes.icons@latest/css/nes-icons.min.css" rel="stylesheet" />
+
+    <title>pictoment</title>
   </head>
   <body>
     <div id="app"></div>
